@@ -1,5 +1,5 @@
 # RemoteCallEventHandler.py -- Lustre remote call event handling (for -R)
-# Copyright (C) 2009 CEA
+# Copyright (C) 2009-2011 CEA
 #
 # This file is part of shine
 #
@@ -21,7 +21,7 @@
 
 
 from Shine.Lustre.EventHandler import EventHandler
-from Shine.Lustre.Actions.Proxies.ProxyAction import SHINE_MSG_VERSION
+from Shine.Lustre.Actions.Proxies.ProxyAction import SHINE_MSG_VERSION, SHINE_MSG_MAGIC
 
 import binascii, pickle
 import sys
@@ -34,129 +34,17 @@ class RemoteCallEventHandler(EventHandler):
     output.
     """
 
-    def _shine_pickle(self, **kwargs):
+    def _shine_msg_pack(self, **kwargs):
         """
         This is the shine event serialization method.
         """
-        # event name is caller name
-        event = sys._getframe(1).f_code.co_name
-        sys.stdout.write("SHINE:%d:%s:%s" % (SHINE_MSG_VERSION, event,
-                binascii.b2a_base64(pickle.dumps(kwargs, -1))))
+        # To be more evolutive, Shine message contains only a dict.
+        sys.stdout.write("%s%d:%s" % (SHINE_MSG_MAGIC, SHINE_MSG_VERSION,
+                          binascii.b2a_base64(pickle.dumps(kwargs, -1))))
         sys.stdout.flush()
 
-    def ev_formatjournal_start(self, node, comp):
-        self._shine_pickle(comp=comp)
-
-    def ev_formatjournal_done(self, node, comp):
-        self._shine_pickle(comp=comp)
-
-    def ev_formatjournal_failed(self, node, comp, rc, message):
-        self._shine_pickle(comp=comp, rc=rc, message=message)
-
-    def ev_formattarget_start(self, node, comp):
-        self._shine_pickle(comp=comp)
-
-    def ev_formattarget_done(self, node, comp):
-        self._shine_pickle(comp=comp)
-
-    def ev_formattarget_failed(self, node, comp, rc, message):
-        self._shine_pickle(comp=comp, rc=rc, message=message)
-
-    def ev_fscktarget_start(self, node, comp):
-        self._shine_pickle(comp=comp)
-
-    def ev_fscktarget_done(self, node, comp):
-        self._shine_pickle(comp=comp)
-
-    def ev_fscktarget_failed(self, node, comp, rc, message):
-        self._shine_pickle(comp=comp, rc=rc, message=message)
-
-    def ev_statustarget_start(self, node, comp):
-        self._shine_pickle(comp=comp)
-
-    def ev_statustarget_done(self, node, comp):
-        self._shine_pickle(comp=comp)
-
-    def ev_statustarget_failed(self, node, comp, rc, message):
-        self._shine_pickle(comp=comp, rc=rc, message=message)
-
-    def ev_starttarget_start(self, node, comp):
-        self._shine_pickle(comp=comp)
-
-    def ev_starttarget_done(self, node, comp):
-        self._shine_pickle(comp=comp)
-
-    def ev_starttarget_failed(self, node, comp, rc, message):
-        self._shine_pickle(comp=comp, rc=rc, message=message)
-
-    def ev_stoptarget_start(self, node, comp):
-        self._shine_pickle(comp=comp)
-
-    def ev_stoptarget_done(self, node, comp):
-        self._shine_pickle(comp=comp)
-
-    def ev_stoptarget_failed(self, node, comp, rc, message):
-        self._shine_pickle(comp=comp, rc=rc, message=message)
-
-    def ev_tunefstarget_start(self, node, comp):
-        self._shine_pickle(comp=comp)
-
-    def ev_tunefstarget_done(self, node, comp):
-        self._shine_pickle(comp=comp)
-
-    def ev_tunefstarget_failed(self, node, comp, rc, message):
-        self._shine_pickle(comp=comp, rc=rc, message=message)
-
-    def ev_statusclient_start(self, node, comp):
-        self._shine_pickle(comp=comp)
-
-    def ev_statusclient_done(self, node, comp):
-        self._shine_pickle(comp=comp)
-
-    def ev_statusclient_failed(self, node, comp, rc, message):
-        self._shine_pickle(comp=comp, rc=rc, message=message)
-
-    def ev_mountclient_start(self, node, comp):
-        self._shine_pickle(comp=comp)
-
-    def ev_mountclient_done(self, node, comp):
-        self._shine_pickle(comp=comp)
-
-    def ev_mountclient_failed(self, node, comp, rc, message):
-        self._shine_pickle(comp=comp, rc=rc, message=message)
-
-    def ev_umountclient_start(self, node, comp):
-        self._shine_pickle(comp=comp)
-
-    def ev_umountclient_done(self, node, comp):
-        self._shine_pickle(comp=comp)
-
-    def ev_umountclient_failed(self, node, comp, rc, message):
-        self._shine_pickle(comp=comp, rc=rc, message=message)
-
-    def ev_statusrouter_start(self, node, comp):
-        self._shine_pickle(comp=comp)
-
-    def ev_statusrouter_done(self, node, comp):
-        self._shine_pickle(comp=comp)
-
-    def ev_statusrouter_failed(self, node, comp, rc, message):
-        self._shine_pickle(comp=comp, rc=rc, message=message)
-
-    def ev_startrouter_start(self, node, comp):
-        self._shine_pickle(comp=comp)
-
-    def ev_startrouter_done(self, node, comp):
-        self._shine_pickle(comp=comp)
-
-    def ev_startrouter_failed(self, node, comp, rc, message):
-        self._shine_pickle(comp=comp, rc=rc, message=message)
-
-    def ev_stoprouter_start(self, node, comp):
-        self._shine_pickle(comp=comp)
-
-    def ev_stoprouter_done(self, node, comp):
-        self._shine_pickle(comp=comp)
-
-    def ev_stoprouter_failed(self, node, comp, rc, message):
-        self._shine_pickle(comp=comp, rc=rc, message=message)
+    def event_callback(self, compname, action, status, node, **kwargs):
+        # For distant message, we do not need to send the node. It will
+        # be extract from the incoming server name.
+        self._shine_msg_pack(compname=compname, action=action,
+                             status=status, **kwargs)
