@@ -1,3 +1,6 @@
+2011-12-22 Aurelien Degremont  <aurelien.degremont@cea.fr>
+	* Add new v3 event mechanism with v2 compatibility (ticket #54).
+
 2011-12-14 Aurelien Degremont  <aurelien.degremont@cea.fr>
 	* Target registration in backend is ok when using update (ticket #110).
 
